# rviz_2d_overlay_plugins

rviz2_plugin_examples/: CMakeLists.txt  README.md  package.xml
rviz2_plugin_examples/include/rviz2_plugin_examples/: PluginExample.h
rviz2_plugin_examples/launch/: rviz_plugin.launch.xml
rviz2_plugin_examples/rviz/: rviz.rviz
rviz2_plugin_examples/src/: PluginExample.cpp
rviz_2d_overlay_msgs/: CMakeLists.txt
rviz_2d_overlay_msgs/msg/: NavSatFix.msg  NavSatStatus.msg  PieChart.msg  Plotter2D.msg
rviz_2d_overlay_plugins/: CMakeLists.txt  plugins_description.xml
rviz_2d_overlay_plugins/include/: pie_chart_display.h  plotter_2d_display.hpp
rviz_2d_overlay_plugins/src/: pie_chart_display.cpp  plotter_2d_display.cpp
