<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz2_plugin_examples</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bzeren1819@gmail.com">bzeren</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>apllanix_msgs</depend>


  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rviz_2d_overlay_msgs</exec_depend>
  <exec_depend>rviz_2d_overlay_plugins</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
